tests/negative/generics/unify_kind_mismatch.orng
// unify_kind_mismatch.orng:8:56: error: expected a value, got a type
// fn wrong[T, const n: Int](x: Pair[T, n]) -> Pair[T, Int] { x }
//                                                       ^
// 
//
struct Pair[T, const n: Int] { data: T }

fn wrong[T, const n: Int](x: Pair[T, n]) -> Pair[T, Int] { x }

fn main() -> Int { 0 }
